<resources>
    <string name="app_name">Frainer</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="first_name_last_name">First Name Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="gym_location">Gym Location</string>
    <string name="gym_day_time">Gym Day / Time</string>
    <string name="partner_preferences">Partner Preferences</string>
    <string name="name">Name</string>
    <string name="invite">Invite</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="sign_up">Sign up</string>
    <string name="submit">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="please_correct_username_password">Please correct your username and password</string>
    <string name="user_cannot_be_empty">Username cannot be empty</string>
    <string name="name_cannot_empty">Name cannot be empty</string>
    <string name="password_cannot_empty">Password cannot be empty</string>
    <string name="confirm_password_empty">Confirm password cannot be empty</string>
    <string name="age_cannot_empty">Age cannot be empty</string>
    <string name="select_gender">Please select gender</string>
    <string name="gym_location_cannot_empty">Gym location cannot be empty</string>
    <string name="gym_day_time_cannot_empty">Gym day/time cannot be empty</string>
    <string name="partner_pref_cannot_empty">Partner preference cannot be empty</string>
    <string name="password_confirm_match">Password and confirm password does not match</string>
    <string name="username_already_exists">Username already exists, please select different username</string>
    <string name="take_photo">Take Photo</string>
    <string name="cancel">Cancel</string>
    <string name="choose_profile_picture">Choose your profile picture</string>
    <string name="success">Success</string>
    <string name="my_frainers">My Frainers</string>
    <string name="pending_request">Pending Request</string>
    <string name="my_profile">My Profile</string>
</resources>